--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -161,6 +161,21 @@
             android:textAllCaps="false" />
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_fragment11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="fragmentActivity"
+                android:textAllCaps="false" />
+
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/toSecondButtonRefResult"
             android:layout_width="wrap_content"
