获取地理位置的方式s

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -173,6 +173,13 @@
                 android:text="fragmentActivity"
                 android:textAllCaps="false" />
 
+            <Button
+                android:id="@+id/btn_FragmentTabHostActivity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="FragmentTabHostActivity"
+                android:textAllCaps="false" />
+
 
         </LinearLayout>
 
