--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -164,6 +164,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:orientation="horizontal">
 
             <Button
@@ -171,6 +172,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="fragmentActivity"
+                android:textAllCaps="false" />
+
+
+            <Button
+                android:id="@+id/btn_TabLayoutViewPager"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TabLayoutViewPagerActivity"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+
+
+            <Button
+                android:id="@+id/btn_Tabhost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MainTabhostActivity"
                 android:textAllCaps="false" />
 
             <Button
